--- a/24Au-ComVarFunctions&MathEqs/24Au-ComVarFunctions&MathEqs.tex
+++ b/24Au-ComVarFunctions&MathEqs/24Au-ComVarFunctions&MathEqs.tex
@@ -37,7 +37,7 @@
 \numberwithin{equation}{section}
 \renewcommand{\theparagraph}{\Alph{paragraph})}
 \newcommand{\Section}[1]{ \refstepcounter{section} \section*{*\thesection\texorpdfstring{\quad}{} #1} \addcontentsline{toc}{section}{\makebox[0pt][r]{*}\thesection\texorpdfstring{\ \ }{} #1} }
-\newcommand{\Subsection}[1]{ \refstepcounter{subsection} \subsection*{*\thesubsection\texorpdfstring{\quad}{} #1} \addcontentsline{toc}{subsection}{\makebox[0pt][r]{*}\thesubsection\texorpdfstring{\ \ }{} #1} }
+\newcommand{\Subsection}[1]{ \refstepcounter{subsection} \subsection*{*\thesubsection\texorpdfstring{\quad}{} #1} \addcontentsline{toc}{subsection}{\makebox[0pt][r]{*}\thesubsection\texorpdfstring{\ \ \ }{} #1} }
 \newcommand{\Subsubsection}[1]{\refstepcounter{subsubsection}\subsubsection*{*\thesubsubsection\texorpdfstring{\quad}{}#1} \addcontentsline{toc}{subsubsection}{\makebox[0pt][r]{*}\thesubsubsection\texorpdfstring{\ \ }{}#1}}
 \setlist[itemize]{leftmargin=3em, labelsep=0.25em, itemindent=0em, itemsep=0pt, parsep=0pt, topsep=0pt, partopsep=0pt}
 \setlist[description]{leftmargin=4em, labelsep=1em, itemindent=-1em, itemsep=0pt, parsep=0pt, topsep=3pt, partopsep=0pt}
